# HoneyHex

./: .gitignore  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/actions/hex-validate/: action.yml
.github/workflows/: ci.yml  publish.yml
agent_docs/: AGENT.md  CODE_PATTERNS.md  PRD.md  TECHNICAL_DESIGN.md
docs/: MANUAL-RUNBOOK.md  MERGE_POLICY.md  PLAN-cli-swarm-abc.md  PLAN-honeyhex-implementation.md  PLAN-pip-self-contained.md  SECURITY.md
documentation/: README.md  backup-and-sync.md  cli-reference.md  configuration.md  development.md  getting-started.md  honey-trail.md  http-api.md  legal-disclaimer.md  merge-and-fork.md  optional-components.md  plugins.md  release-checklist.md  security.md
examples/cells/: README.md
examples/cells/coding-agent/: README.md
examples/cells/game-dev/: README.md
examples/cells/research/: README.md
examples/demo-agent-cell/: README.md  run-demo.sh
examples/github-actions/: README.md  hex-validate.yml
scripts/: adoption_smoke.sh
src/honeyhex/: __init__.py
src/honeyhex/adoption/: __init__.py  export_ledger.py  scrub.py  search.py  stats.py  timeutil.py  validate.py
src/honeyhex/api/: __init__.py  app.py  main.py  routes.py
src/honeyhex/branching/: __init__.py  experiment.py  git_ops.py  shadow.py
src/honeyhex/bundle/: __init__.py  io.py
src/honeyhex/cell/: __init__.py  config.py  hooks.py  onboarding.py  peer_merge.py  remotes.py  scaffold.py
src/honeyhex/cli/: __init__.py  adoption_cmds.py  doctor.py  llm_cmds.py  main.py  outbox_cli.py  plugins.py  porcelain.py  swarm.py
src/honeyhex/commit/: __init__.py  manager.py  models.py
src/honeyhex/daemon/: __init__.py  config.py  service.py
src/honeyhex/eval/: __init__.py  tables.py
src/honeyhex/inspect/: __init__.py  core.py
src/honeytrail/: __init__.py  cli.py  models.py  server.py
tests/: conftest.py  dummy_hex_plugin.py  test_adoption.py  test_cli_extras.py  test_core_smoke.py  test_followup_features.py  test_ledger_commit.py  test_log_filters.py  test_phase3_phase4.py  test_phase7_llm.py  test_plan_cli_abc.py  test_registry_phase5_6.py  test_scrub_golden.py
tests/honeytrail/: test_mcp_tools.py  test_store.py
(+25 files in other folders)
